# caillou

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  release.yml
caillou/: __init__.py  __main__.py  config.py  redundant_retriver.py  translate.py
caillou/apps/: __init__.py
caillou/apps/translator/: __main__.py
caillou/translate/: translate.py  translate.tcss  translator.py
features/: discuss.feature
tests/unit_tests/: test_translate.py
