[tool.poetry]
name = "caillou"
version = "0.0.0"
description = "AI-powered toolbox for the terminal"
authors = ["Sylvain <sdudoit@proton.me>"]
license = "GPLv3"
readme = "README.md"

homepage = "https://github.com/sdudoit/caillou"
repository = "https://github.com/sdudoit/caillou"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
langchain = "^0.1.16"
openai = "^1.21.2"
langchain-openai = "^0.1.3"
textual = "^0.57.1"
clipboard = "^0.0.4"
platformdirs = "^4.2.1"
orjson = "3.10.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.4.0"
textual-dev = "^1.5.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.ruff]
lint.select = ["E", "F", "W", "Q", "I"]
lint.ignore = ["E203"]
lint.fixable = ["ALL"]
lint.unfixable = []
line-length = 120


[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["docs", "tests", "examples", "tools", "build"]
ignore_missing_imports = true


[tool.poetry.scripts]
caillou = 'caillou.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"
latest-tag = true